# llm_service_api

./: .gitignore  README.md  env-template  pyproject.toml
llm_api/: settings.py  urls.py  views.py
llm_api/providers/: base.py  gemini.py  inhouse.py  loader.py  openai.py
project/: settings.py  urls.py
tests/: conftest.py  test_auth.py  test_views.py
