[project]
name = "llm-service-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "openai>=1.76.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
